test/error/mutual.dck
%-

(:def main
  (:let
    [a "hello"]
    [b a]
    b))
